--- a/price.html
+++ b/price.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta nam="viewport" content="width=device-width, initial-scale=1.0">
     <title>Price</title>
 </head>
 <body>
     <h1>Price</h1>
 </body>
-</h
+</h>
